@@ -7,11 +7,11 @@ import java.io.InputStreamReader;
 import java.lang.ProcessBuilder.Redirect;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import com.devonfw.tools.ide.cli.CliException;
 import com.devonfw.tools.ide.context.IdeContext;
@@ -45,6 +45,7 @@ public final class ProcessContextImpl implements ProcessContext {
     this.context = context;
     this.processBuilder = new ProcessBuilder();
     // TODO needs to be configurable for GUI
+    // this.processBuilder.inheritIO();
     this.processBuilder.redirectOutput(Redirect.INHERIT).redirectError(Redirect.INHERIT);
     this.errorHandling = ProcessErrorHandling.THROW;
     Map<String, String> environment = this.processBuilder.environment();
@@ -97,7 +98,12 @@ public final class ProcessContextImpl implements ProcessContext {
   }
 
   @Override
-  public ProcessResult run(boolean capture) {
+  public ProcessResult run(boolean capture, boolean isBackgroundProcess) {
+
+    if (isBackgroundProcess) {
+      this.context
+          .warning("TODO https://github.com/devonfw/IDEasy/issues/9 Implement background process functionality");
+    }
 
     if (this.executable == null) {
       throw new IllegalStateException("Missing executable to run process!");
@@ -130,26 +136,11 @@ public final class ProcessContextImpl implements ProcessContext {
       List<String> err = null;
       Process process = this.processBuilder.start();
       if (capture) {
-        out = new ArrayList<>();
-        err = new ArrayList<>();
-        try (BufferedReader outReader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-            BufferedReader errReader = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
-          String outLine = "";
-          String errLine = "";
-          while ((outLine != null) || (errLine != null)) {
-            if (outLine != null) {
-              outLine = outReader.readLine();
-              if (outLine != null) {
-                out.add(outLine);
-              }
-            }
-            if (errLine != null) {
-              errLine = errReader.readLine();
-              if (errLine != null) {
-                err.add(errLine);
-              }
-            }
-          }
+        try (BufferedReader outReader = new BufferedReader(new InputStreamReader(process.getInputStream()));) {
+          out = outReader.lines().collect(Collectors.toList());
+        }
+        try (BufferedReader errReader = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
+          err = errReader.lines().collect(Collectors.toList());
         }
       }
       int exitCode = process.waitFor();
@@ -220,7 +211,7 @@ public final class ProcessContextImpl implements ProcessContext {
   private String findBashOnWindows() {
 
     // Check if Git Bash exists in the default location
-    Path defaultPath = Paths.get("C:\\Program Files\\Git\\bin\\bash.exe");
+    Path defaultPath = Path.of("C:\\Program Files\\Git\\bin\\bash.exe");
     if (Files.exists(defaultPath)) {
       return defaultPath.toString();
     }
